<resources>
    <string name="app_name" translatable="false">PassVault</string>
    <string name="author" translatable="false">finnik</string>
    <string name="create_main_password">Construct a secure password, that will be used to encrypt all your passwords:</string>
    <string name="login" translatable="false">Login</string>

    <string name="generate_password">Generate</string>
    <string name="manage_passwords">Manage</string>

    <string name="password_length">Password length: %d</string>

    <string name="big_letters">Big Letters</string>
    <string name="small_letters">Small Letters</string>
    <string name="numbers">Numbers</string>
    <string name="specials">Special Characters</string>

    <string name="pass">Password</string>
    <string name="site">Website</string>
    <string name="user">Username/Email</string>
    <string name="other">Other informations</string>

    <string name="save">Save and copy</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="confirm_deleting_password">Do you want to delete this password?</string>

    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="wrong_pass">Wrong password!</string>

    <string name="created_drive_pass">We created a password for you with which your passwords in your Google Drive will be encrypted: %s. Please note it down so that you can get access to your drive passwords from everywhere!</string>
    <string name="enter_drive_pass">Please enter the password with which your passwords in Google Drive are encrypted:</string>
    <string name="wrong_drive_pass">This is not the correct drive password. Do you want to delete all your online saved passwords in order to get a new drive password?</string>
    <string name="confirm_deleting_drive">By continuing you will delete all passwords saved in your Google Drive. If you are sure please enter \'CONFIRM\':</string>
    <string name="synchronized_with_drive">Synchronized with Google Drive</string>
    <string name="error_while_synchronizing">An error occurred while synchronizing with Google Drive. Please try again, search the internet on Google status code %s or contact us(contact@finnik.de).</string>
    <string name="show_password">Show password</string>
    <string name="error_disconnecting_drive">An error occurred while disconnecting from drive</string>
    <string name="disconnected_drive">Successfully disconnected from drive</string>
    <string name="enter_main_password">Please enter main password to continue</string>
    <string name="repeat_main_pass">Please enter your new master password again:</string>
    <string name="weak_main_pass">This password is too weak. Please choose a safer one</string>
    <string name="confirm_main_pass">Confirm</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="accept" translatable="false">OK</string>
    <string name="decline">Cancel</string>
    <string name="about">About us and more help</string>
    <string name="disconnect_drive">Disconnect drive</string>
    <string name="onboarding_next">NEXT</string>
    <string name="onboarding_skip">SKIP</string>
    <string name="onboarding_got_it">GOT IT</string>
    <string name="onboarding_welcome">Welcome to PassVault!\n\nWe are happy that you have found the way here and wish you a lot of fun with the password manager. The following pages will teach you the basic functions of the app and if you have any further questions, please contact us at <a href="mailto:contact@finnik.de">contact@finnik.de</a></string>
    <string name="onboarding_master_password_description">Your first task will be to come up with a strong master password. With this password all your passwords will be encrypted later. So make sure your password is strong enough: PassVault will help you estimate the strength of your password!</string>
    <string name="onboarding_master_password">Master password</string>
    <string name="onboarding_store_passwords">Store passwords</string>
    <string name="onboarding_store_passwords_description">This is the home page of PassVault.\nHere you can save passwords: Either you enter a password or you let yourself generate one! You can then save more information about the password, such as e.g the website where you use the password, or the email address that belongs to the password. After saving, the password is automatically copied to your clipboard so that you can continue to use it directly.</string>
    <string name="onboarding_manage">Manage your passwords</string>
    <string name="onboarding_manage_description">On this page you can manage your saved passwords! Here you can search for passwords by entering keywords into the search box e. g. the page stored together with the password. If you have found the correct password, you can copy it directly to your clipboard by clicking on it, so that you can then use it directly. More options will open when you hold down the password box. In the dialog that opens, you can display the password, edit it, or even delete it.</string>
    <string name="onboarding_drive">Synchronize with Google Drive</string>
    <string name="onboarding_drive_description">If you want to synchronize your passwords across multiple devices, you can do so via Google Drive. To set up synchronization, press the Drive logo later and log in with your Google account. If you\'ve already connected your Google Account to PassVault, you\'ll now need to enter the password used to encrypt passwords on Google Drive. The first time you associate PassVault with Google Drive, a password is generated to encrypt the passwords on Google Drive.</string>
    <string name="settings">SETTINGS</string>
    <string name="change_master_password">Change master password</string>
    <string name="show_onboarding">Show help screen</string>
    <string name="show_drive_password">Your Google Drive password</string>
    <string name="contact_us">Contact us</string>
    <string name="drive_password">Your Google Drive password is: %s</string>
    <string name="confirm_disconnecting_drive">Are you sure you want to disconnect from Google Drive?</string>
    <string name="insufficientChars">You have to select at least one type of character.</string>
</resources>
