<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/onboarding_waving_hand"
        android:contentDescription="@string/question_mark" />

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_welcome"
        android:padding="20dp"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/foreground"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/author"
        android:src="@drawable/finnik_logo"/>
</LinearLayout>