<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_store_passwords"
        android:textAlignment="center"
        android:fontFamily="@font/raleway"
        android:textSize="25sp"
        android:textColor="@color/foreground"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/screenshot_generate"
        android:contentDescription="@string/question_mark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/onboarding_store_passwords_description"
        android:textColor="@color/foreground"
        android:textSize="16sp"
        android:textAlignment="center"/>
</LinearLayout>