<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/onboarding_drive"
        android:textColor="@color/foreground"
        android:textAlignment="center"
        android:fontFamily="@font/raleway"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/google_drive"
        android:contentDescription="@string/question_mark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_drive_description"
        android:padding="20dp"
        android:textSize="16sp"
        android:textColor="@color/foreground"
        android:textAlignment="center"/>
</LinearLayout>