<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foreground"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/onboarding_master_password"
        android:textColor="@color/background"
        android:textAlignment="center"
        android:fontFamily="@font/raleway"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/onboarding_thinking"
        android:contentDescription="@string/question_mark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/onboarding_master_password_description"
        android:textColor="@color/background"
        android:textSize="16sp"
        android:textAlignment="center"/>
</LinearLayout>