<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".gui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/foreground"
            android:hint="@string/enter_main_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="@dimen/content_padding_normal"
            android:textColor="@color/background">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_border"
            android:text="@string/login"
            android:textColor="@color/foreground" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/author"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/finnik_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>