<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/button_border"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/question_mark"
            android:contentDescription="@string/question_mark" />

        <TextView
            android:id="@+id/textView_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/button_accept_confirm"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/background"
            android:src="@drawable/check_mark"
            android:contentDescription="@string/accept" />
        <ImageView
            android:id="@+id/button_decline_confirm"
            android:layout_width="50dp"
            android:layout_marginStart="50dp"
            android:layout_height="40dp"
            android:background="@color/background"
            android:src="@drawable/close"
            android:contentDescription="@string/decline" />
    </LinearLayout>
</LinearLayout>