<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_main_password"
        android:labelFor="@+id/edit_text_create_main"
        android:fontFamily="@font/raleway"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_text_create_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/foreground"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="@dimen/content_padding_normal"
        android:textColor="@color/background"
        android:imeOptions="actionDone">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_create_main_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress_create_main_feedback"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="100"
        android:progressTint="@color/red"/>

    <TextView
        android:id="@+id/textView_repeat_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/repeat_main_pass"
        android:fontFamily="@font/raleway"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:labelFor="@+id/edit_text_repeat_main"/>

    <EditText
        android:id="@+id/edit_text_repeat_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/foreground"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="@dimen/content_padding_normal"
        android:textColor="@color/background"
        android:visibility="gone">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_main_pass"
        android:background="@drawable/button_border"
        android:onClick="confirm"
        android:layout_marginTop="5dp"/>
</LinearLayout>